--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.2",
     "eslint": "4.19.1",
     "eslint-config-matheusvellone-base": "1.0.11",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-react": "^7.7.0",
     "serve": "^6.5.3"
   }
 }
