--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "vote-counter-cra",
   "version": "0.1.0",
   "private": true,
+  "pkg": {
+    "assets": "build/**/*.*"
+  },
   "dependencies": {
     "axios": "0.18.0",
     "material-ui": "1.0.0-beta.39",
@@ -9,14 +12,16 @@
     "ramda": "0.25.0",
     "react": "16.3.0",
     "react-dom": "16.3.0",
-    "react-scripts": ".1.1"
+    "react-scripts": "1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "serve": "serve -os build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-windows": "pkg serve.js --targets node8-win-x64",
+    "build-linux": "pkg serve.js --targets node8-linux-x64"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
@@ -24,6 +29,7 @@
     "eslint-config-matheusvellone-base": "1.0.11",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-react": "^7.7.0",
+    "pkg": "^4.3.1",
     "serve": "^6.5.3"
   }
 }
